# vigil

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  cog.toml  lefthook.yml
.github/workflows/: ci.yml  conventions.yml
docs/: ANALYSIS.md  ENHANCEMENTS.md  SPEC.md  TODO.md
docs/adr/: 0001-event-log-driven-supervisor.md  0002-single-daemon-owned-caffeinate.md  0003-per-session-jsonl-event-logs.md  0004-thin-hooks-daemon-interprets.md  0005-commit-aware-timeout-extension.md  0006-staleness-based-release.md  0007-daemon-lifecycle-hook-spawned.md  0008-hardcoded-timeout-constants.md  0009-battery-aware-hold-cap.md  0010-session-liveness-via-process-identity.md  0011-reactive-kqueue-event-loop.md  0012-reactive-log-directory-watch.md  0013-turn-span-activity-model.md  0014-safe-self-upgrade.md
src/: caffeinate.rs  cli.rs  config.rs  daemon.rs  error.rs  event.rs  install.rs  journal.rs  main.rs  proc.rs  watch.rs
