[package]
name = "vigil"
version = "0.1.0"
edition = "2024"
description = "Keeps the Mac awake for Touch ID commit signing during long Claude Code sessions"
authors = ["Taylor Silenzio <tsilenzio@gmail.com>"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
kqueue = "1.2.0"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
